2014-04-17  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/DiskCopy42.cs:
	* ImagePlugins/ImagePlugin.cs:
	  Added support for Apple FileWare (aka Twiggy) disks as
	  dumped by Sigma Seven's BLU

2014-04-17  Natalia Portillo  <claunia@claunia.com>

	* Plugins/AppleMFS.cs:
	  Corrected alignment failure because of incorrect type
	  definition on MDB struct.

2014-04-17  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/DiskCopy42.cs:
	  Correct typos, misalignment of field and
	  BigEndianBitConverter behaviour

2014-04-15  Natalia Portillo  <claunia@claunia.com>

	* FileSystemIDandChk.csproj:
	* ImagePlugins/DiskCopy42.cs:
	  Added support for Apple DiskCopy 4.2 format

	* ImagePlugins/ImagePlugin.cs:
	  Added standard IBM, DEC and Apple floppy formats

2014-04-14  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Plugins.cs:
	* Swapping.cs:
	* Plugins/BFS.cs:
	* Plugins/FAT.cs:
	* Plugins/FFS.cs:
	* Plugins/ODS.cs:
	* Plugins/NTFS.cs:
	* Plugins/HPFS.cs:
	* DateHandlers.cs:
	* Plugins/SysV.cs:
	* Plugins/extFS.cs:
	* Plugins/Opera.cs:
	* Plugins/Plugin.cs:
	* StringHandlers.cs:
	* Plugins/ext2FS.cs:
	* Plugins/SolarFS.cs:
	* Plugins/UNIXBFS.cs:
	* Plugins/MinixFS.cs:
	* Plugins/ISO9660.cs:
	* PartPlugins/MBR.cs:
	* Plugins/AppleMFS.cs:
	* PartPlugins/NeXT.cs:
	* Plugins/PCEngine.cs:
	* Plugins/AppleHFS.cs:
	* ImagePlugins/CDRWin.cs:
	* PartPlugins/AppleMap.cs:
	* Plugins/AppleHFSPlus.cs:
	* BigEndianBitConverter.cs:
	* FileSystemIDandChk.csproj:
	* EndianAwareBinaryReader.cs:
	* ImagePlugins/ImagePlugin.cs:
	  Refactor and reformat code

2014-04-14  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* ImagePlugins/CDRWin.cs:
	  Constrain debug information to debug mode

2014-04-14  Natalia Portillo  <claunia@claunia.com>

	* BigEndianBitConverter.cs:
	  Added BitConverter for BigEndian

	* FileSystemIDandChk.csproj:
	  FileSystemIDandChk/BigEndianBitConverter.cs


	* ImagePlugins/CDRWin.cs:
	  Corrected parsing